# c4solver

./: .bench-db.sexp  .gitignore  .ocamlformat  CHANGES.md  Cargo.toml  LICENSE  Makefile  README.md  benchmark.txt  c4solver.opam  dune-project  my-package.opam
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-odoc.yml  main.yml
odoc/: index.html
odoc/c4solver/: index.html
odoc/c4solver/C4solver/: index.html
odoc/c4solver/C4solver/Bench/: index.html
odoc/c4solver/C4solver/Bench/Key/: index.html
odoc/c4solver/C4solver/Bench/Result/: index.html
odoc/c4solver/C4solver/Bench/Solver/: index.html
odoc/c4solver/C4solver/Bench/Solver/Lang/: index.html
odoc/c4solver/C4solver/Bench/Solver/Params/: index.html
odoc/c4solver/C4solver/Bench/Test_file/: index.html
odoc/c4solver/C4solver/Bench/Test_line/: index.html
odoc/c4solver/C4solver/Bench_db/: index.html
odoc/c4solver/C4solver/Bencher/: index.html
odoc/c4solver/C4solver/Gen_scripts/: index.html
odoc/c4solver/C4solver/Measure/: index.html
odoc/c4solver/C4solver/Measure/Mean/: index.html
odoc/c4solver/C4solver/Position/: index.html
odoc/c4solver/C4solver/Position/Basic/: index.html
odoc/c4solver/C4solver/Position/Bitboard/: index.html
odoc/c4solver/C4solver/Position/Bitboard128/: index.html
odoc/c4solver/C4solver/Position/Bitboard64/: index.html
odoc/c4solver/C4solver/Position/Bitboard_uint/: index.html
odoc/c4solver/C4solver/Position/module-type-S/: index.html
odoc/c4solver/C4solver/Solver/: index.html
odoc/c4solver/C4solver/Solver/Result_with_measure/: index.html
odoc/c4solver/C4solver/Step/: index.html
odoc/c4solver/C4solver__/: index.html
odoc/c4solver/C4solver__Bench/: index.html
odoc/c4solver/C4solver__Bench_db/: index.html
odoc/c4solver/C4solver__Bencher/: index.html
odoc/c4solver/C4solver__Gen_scripts/: index.html
odoc/c4solver/C4solver__Measure/: index.html
odoc/c4solver/C4solver__Position/: index.html
odoc/c4solver/C4solver__Position_intf/: index.html
odoc/c4solver/C4solver__Resource/: index.html
odoc/c4solver/C4solver__Solver/: index.html
odoc/c4solver/C4solver__Step/: index.html
odoc/c4solver/C4solver__Transposition_table/: index.html
resources/: README.md
rs/: Cargo.toml
rs/src/: bench.rs  main.rs  measure.rs  position.rs  solver.rs  step.rs  transposition_table.rs
script/: README.md  run-alpha-beta-rs.sh  run-alpha-beta.sh  run-bitboard-rs.sh  run-bitboard.sh  run-column-exploration-order-rs.sh  run-column-exploration-order.sh  run-iterative-deepening-rs.sh  run-iterative-deepening.sh  run-minmax-rs.sh  run-minmax.sh  run-transposition-table-rs.sh  run-transposition-table.sh
src/: bench.ml  bench.mli  bench_db.ml  bench_db.mli  bencher.ml  bencher.mli  c4solver.ml  c4solver.mli  dune  gen_scripts.ml  gen_scripts.mli  measure.ml  measure.mli  my_package.mli  position.ml  position.mli  position_intf.ml  resource.ml  resource.mli  solver.ml  solver.mli  span.ml  span.mli  step.ml  step.mli  transposition_table.ml  transposition_table.mli
test/: dune  monitor-accuracy.t  negamax-step-1.t  test__hello.ml  test__position.ml  test__span.ml
