opam-version: "2.0"
synopsis: "A solver for the connect4 game, written in OCaml"
description: "See https://github.com/mbarbin/c4solver/README.md"
maintainer: "Mathieu Barbin"
authors: "Mathieu Barbin"
license: "MIT"
homepage: "https://github.com/mbarbin/c4solver"
doc: "https://mbarbin.github.io/c4solver/odoc/c4solver/index.html"
bug-reports: "https://github.com/mbarbin/c4solver/issues"
depends: [
  "ocaml" {>= "4.12.0"}
  "dune" {>= "2.0.0"}
  "ANSITerminal" {>= "0.8.3"}
  "core" {= "v0.15~preview.126.09+332"}
  "core_unix" {= "v0.15~preview.126.09+332"}
  "expect_test_helpers_core" {= "v0.15~preview.126.09+332" & with-test}
  "ppx_jane" {= "v0.15~preview.126.09+332"}
  "stdint" {>= "0.7.0"}
  "stdio" {= "v0.15~preview.126.09+332"}
  "textutils" {= "v0.15~preview.126.09+332"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mbarbin/c4solver.git"
