opam-version: "2.0"
synopsis: "A solver for the connect4 game, written in OCaml"
description: "See https://github.com/mbarbin/c4solver/README.md"
maintainer: "Mathieu Barbin"
authors: "Mathieu Barbin"
license: "MIT"
homepage: "https://github.com/mbarbin/c4solver"
doc: "https://mbarbin.github.io/c4solver/odoc/c4solver/index.html"
bug-reports: "https://github.com/mbarbin/c4solver/issues"
depends: [
  "ocaml" {>= "5.1"}
  "dune" {>= "3.11"}
  "ANSITerminal" {>= "0.8.3"}
  "base" {>= "v0.16"}
  "bignum" {>= "v0.16"}
  "cinaps" {>= "v0.15.1" & with-test}
  "core" {>= "v0.16"}
  "core_unix" {>= "v0.16"}
  "expect_test_helpers_core" {>= "v0.16" & with-test}
  "mtime" {>= "2.0"}
  "mtime-extended" {>= "2.0"}
  "ppx_jane" {>= "v0.16"}
  "stdint" {>= "0.7"}
  "stdio" {>= "v0.16"}
  "textutils" {>= "v0.16"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mbarbin/c4solver.git"
