(library
 (name c4solver)
 (public_name c4solver)
 (flags -warn-error +a)
 (inline_tests)
 (libraries
  ANSITerminal
  base
  bignum
  core
  mtime
  mtime.clock.os
  mtime-extended
  stdint
  stdio
  textutils.ascii_table)
 (preprocess
  (pps ppx_jane ppx_js_style -check-doc-comments)))

(cinaps
 (files position.ml))
