(library
 (name c4solver_test)
 (flags -warn-error +a)
 (libraries base c4solver expect_test_helpers_core.expect_test_helpers_base)
 (inline_tests)
 (preprocess
  (pps ppx_jane)))

(copy_files %{project_root}/resources/Test_L*)

(alias
 (name runtest)
 (deps
  (glob_files Test_L*)))

(cram
 (deps
  (glob_files Test_L*)
  %{bin:c4solver}))
